feat: Add Java exercises covering fundamental programming concepts, object-oriented programming, and exception handling.